--- a/keycloak/pom.xml
+++ b/keycloak/pom.xml
@@ -3,18 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.nifelee</groupId>
+    <artifactId>tutorials</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-  <groupId>com.nifelee</groupId>
-  <artifactId>tutorials</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>keycloak</artifactId>
   <packaging>pom</packaging>
 
   <modules>
-    <module>keycloak</module>
+    <module>spring-keycloak-admin</module>
   </modules>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
 </project>
